# baserust

./: .dockerignore  .env.example  .env.prod  .gitignore  .gitnexusignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  justfile  mock.toml  nginx.conf  seed.prod.toml.example  seed.toml
.claude/skills/adding-a-feature/: SKILL.md
.claude/skills/authorization/: SKILL.md
.claude/skills/closed-enums/: SKILL.md
.claude/skills/cross-module-enrichment/: SKILL.md
.claude/skills/eventbus/: SKILL.md
.claude/skills/transactions/: SKILL.md
crates/idm/: Cargo.toml
crates/idm/src/: lib.rs
docs/superpowers/plans/: 2026-07-04-sse-widget-events.md  2026-07-08-auth-audit-phase1-app.md  2026-07-08-auth-audit-phase1-idm.md  2026-07-16-multitenancy-p1-tenant-storage.md
docs/superpowers/specs/: 2026-07-04-sse-design.md  2026-07-08-auth-audit-log-design.md  2026-07-16-multitenancy-design.md
keys/: README.md  dev-ed25519.pem  dev-ed25519.pub.pem
migrations/app/: 0001_create_widgets.down.sql  0001_create_widgets.up.sql  0002_create_authz.down.sql  0002_create_authz.up.sql  0003_create_profiles.down.sql  0003_create_profiles.up.sql  0004_create_outbox.down.sql  0004_create_outbox.up.sql  0005_content_all_perms.down.sql  0005_content_all_perms.up.sql  0005_widgets_tenant.down.sql  0005_widgets_tenant.up.sql  0006_widgets_tenant_enforce.down.sql  0006_widgets_tenant_enforce.up.sql
migrations/idm/: 0003_add_outbox.up.sql  0004_add_tenants.down.sql  0004_add_tenants.up.sql
migrations/search/: 0001_create_admin_user_index.down.sql  0001_create_admin_user_index.up.sql  0002_create_auth_event.down.sql  0002_create_auth_event.up.sql
scripts/: migrate-all.sh
scripts/initdb/: 00-roles-schemas.sh
scripts/prod/: README.md  build-and-export.sh  import-images.sh
src/: config.rs  error.rs  extract.rs  health.rs  lib.rs  main.rs  openapi.rs  pagination.rs  state.rs
src/app/: mock.rs  mod.rs  policy_repo.rs  router.rs  runtime.rs  seed.rs  state.rs
src/app/adapters/: app_outbox_source.rs  content_avatar_probe.rs  idm_outbox_source.rs  idm_user_directory.rs  in_process_profile_directory.rs  mod.rs  profile_display_names.rs  tenant_claims.rs  tenant_directory.rs  tenant_role_repo.rs  user_search_index.rs
src/features/: mod.rs
src/features/auth/: emit.rs  middleware.rs  mod.rs  port.rs  routes.rs  token.rs  types.rs
src/features/auth_audit/: events.rs  mod.rs  projector.rs  retention.rs  routes.rs  service.rs  types.rs
src/features/auth_audit/repo/: memory.rs  mod.rs  postgres.rs
src/features/content/: mod.rs  routes.rs  types.rs
src/features/idm/: jwt.rs  middleware.rs  mod.rs  password.rs  routes.rs  service.rs  types.rs
src/features/idm/repo/: memory.rs  mod.rs  postgres.rs
src/features/profile/: mod.rs  port.rs  routes.rs  service.rs  types.rs
src/features/profile/repo/: memory.rs  mod.rs  outbox.rs  postgres.rs
src/features/search/: mod.rs  projector.rs  rebuild.rs  types.rs
src/features/search/repo/: memory.rs  mod.rs  postgres.rs
src/features/tenants/: mod.rs  routes.rs  service.rs  types.rs
src/features/tenants/repo/: memory.rs  mod.rs  postgres.rs
src/features/users/: mod.rs  port.rs  routes.rs  service.rs  types.rs
src/features/widget/: events.rs  mod.rs  port.rs  routes.rs  service.rs  types.rs  view.rs
src/features/widget/repo/: memory.rs  mod.rs  postgres.rs
src/health/: mod.rs
src/infra/: audit.rs  authz.rs  client_context.rs  config.rs  error.rs  extract.rs  jetstream.rs  mod.rs  objectstore.rs  op_perms.rs  openapi.rs  outbox.rs  pagination.rs  percent.rs  sort.rs
src/widget/: mod.rs  repo.rs  routes.rs  service.rs  types.rs
tests/: auth_api.rs  auth_audit_api.rs  auth_audit_emit.rs  content_api.rs  durable_events_p1.rs  event_bus_conformance.rs  idm_api.rs  idm_repo_conformance.rs  jetstream_smoke.rs  openapi_authz_test.rs  policy_repo_test.rs  profile_api.rs  profile_repo_conformance.rs  rate_limit_test.rs  rbac_scope_test.rs  router_groups_api.rs  search_projection_p3.rs  search_repo_conformance.rs  tenant_admin_api.rs  tenant_api.rs  tenant_isolation_api.rs  tenant_repo_conformance.rs  users_api.rs  widget_api.rs  widget_repo_conformance.rs
tests/support/: mod.rs
