[package]
name = "xchangeai"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
# 有 seed bin 后,cargo run 默认跑主服务(seed 用 `just seed` / `cargo run --bin seed`)
default-run = "xchangeai"

[dependencies]
# idm 认证**领域/服务库**(独立 repo github.com/GGGLHHH/rust-idm,零 HTTP),git tag 锁版本。
# 本地联调 idm 时临时改回 `path = "../rust-idm"`;稳定走 tag。
idm = { git = "https://github.com/GGGLHHH/rust-idm", tag = "v0.2.0" }

# 异步运行时 —— 一切的地基
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }

# Web 框架 + 中间件
axum = "0.8"
# CookieJar:typed cookie 提取/设置(httponly 认证用)
axum-extra = { version = "0.10", features = ["cookie"] }
tower-http = { version = "0.7", features = ["trace", "catch-panic", "request-id", "cors", "set-header"] }

# OpenAPI(替 huma);yaml feature 自带 to_yaml(),绕开 2026 混乱的 serde_yaml 生态
utoipa = { version = "5", features = ["axum_extras", "yaml", "uuid", "time"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }

# 配置:只用环境变量(不碰 yaml 文件 → 不引入已废弃的 serde_yaml)
figment = { version = "0.10", features = ["env"] }
dotenvy = "0.15"

# 序列化骨架
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 输入验证(声明式,在 service 边界调用)
garde = { version = "0.23", features = ["derive", "email"] }

# 结构化日志(替 slog)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 错误处理:库层 typed + 应用层 context 链
thiserror = "2"
anyhow = "1"

# SQL:连接 + 仓储范式就位(默认走内存,设 APP_DB_HOST 才连)
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "macros", "time", "migrate"] }

# SQL builder(为必然到来的动态查询铺路:可选 filter / 分页 / 多变 JOIN)。
# 注意 crate 名是 sea-query-sqlx —— 旧名 sea-query-binder 停在 sqlx 0.8;1.0 线才接 sqlx 0.9。
sea-query = "1.0"
sea-query-sqlx = { version = "0.9", default-features = false, features = ["sqlx-postgres", "runtime-tokio", "tls-rustls", "with-uuid", "with-time"] }

# trait 对象 + async fn:dyn 安全需要 async-trait 宏(原生 async-in-trait 不 object-safe)
async-trait = "0.1"

# 工具
uuid = { version = "1", features = ["v4", "v7", "serde"] }
# 时间:timestamptz <-> OffsetDateTime(审计字段);serde-well-known 提供 RFC3339
time = { version = "0.3", features = ["serde-well-known"] }
# cursor 游标编解码(opaque base64url token)
base64 = "0.22"

# 密码哈希:argon2id。PHC 串自描述(算法 id/盐/参数都在串里),verify 天然支持多算法迁移。
# std feature 拉入 rand + getrandom,SaltString::generate(OsRng) 才可用。
argon2 = { version = "0.5", features = ["std"] }

# JWT access token(HS256):app 自己的 claim 形状 + 签验(features/auth/token.rs 的 AppTokens,
# 实现 idm 的 TokenSigner/TokenVerifier 端口)。claim 由 app 显式拥有,要换 RS256/KMS 改 AppTokens。
jsonwebtoken = "9"
# refresh token:sha2 算 SHA-256 hash 落库,rand 出 32B CSPRNG 明文。
sha2 = "0.10"
rand = "0.8"

# seed 数据源:toml(避开已废弃的 serde_yaml;dtolnay 维护、与 serde 同源)
toml = "0.8"
# 限流:按 IP(SmartIp,nginx 前优先 X-Forwarded-For)令牌桶,超限 429 + ErrorBody。opt-in(RATE_LIMIT_ENABLED)。
# 注意 crates.io 包名是下划线 tower_governor(非连字符)。
tower_governor = "0.8.0"
# metrics:Prometheus 请求计数/延迟直方图 + /metrics 端点。opt-in(METRICS_ENABLED)。
axum-prometheus = "0.10.0"

# feature 开关:pg-conformance 开了才编译"打真库的仓储一致性测试"(需 DATABASE_URL + 跑着的 pg)。
# 默认 cargo test 不开它 → 零 DB、永远可跑;PG 一致性用本地 `just test-pg` 显式触发(将来接 CI 时单列一个 job 跑它)。
[features]
pg-conformance = []

# 测试专用依赖(集成测试 tests/ 用 tower oneshot 打端点)
[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

# lint 配置(替 .golangci.yml):clippy + 编译器内置 lint 一处声明
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
